<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/beijin_hui"
    tools:context="com.example.administrator.mine.MineActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:clickable="true"
                android:id="@+id/wode_qingdenglu"
                android:onClick="MyOnclick"
                android:background="@color/beijin_lv"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/mrtx_pic" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="@string/wode_dianjidenglu"
                    android:textColor="@color/ziti_bai"
                    android:textSize="20dp" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="20dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/img_my_fragment_login_right" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/ziti_bai"
                android:clickable="true"
                android:id="@+id/wode_fabu"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/img_my_fragment_release_left" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:text="@string/wode_wodefabu"
                    android:textColor="@color/ziti_hei"
                    android:textSize="18dp" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="20dp"
                    android:src="@drawable/img_my_fragment_title_right" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:clickable="true"
                android:id="@+id/wode_caogao"
                android:background="@color/ziti_bai"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/img_my_fragment_draft_left" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:text="@string/wode_wodecaogao"
                    android:textColor="@color/ziti_hei"
                    android:textSize="18dp" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="20dp"
                    android:src="@drawable/img_my_fragment_title_right" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:clickable="true"
                android:id="@+id/wode_shoucang"
                android:background="@color/ziti_bai"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/img_my_fragment_collection_left" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:text="@string/wode_wodeshoucang"
                    android:textColor="@color/ziti_hei"
                    android:textSize="18dp" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="20dp"
                    android:src="@drawable/img_my_fragment_title_right" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:clickable="true"
                android:id="@+id/wode_xiaoxi"
                android:background="@color/ziti_bai"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/img_my_fragment_msg_left" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:text="@string/wode_wodexiaoxi"
                    android:textColor="@color/ziti_hei"
                    android:textSize="18dp" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="20dp"
                    android:src="@drawable/img_my_fragment_title_right" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:id="@+id/wode_shengming"
                android:background="@color/ziti_bai"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/img_my_fragment_stament_left" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:text="@string/wode_wodepingtai"
                    android:textColor="@color/ziti_hei"
                    android:textSize="18dp" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="20dp"
                    android:src="@drawable/img_my_fragment_title_right" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:clickable="true"
                android:id="@+id/wode_aijiaxiang"
                android:background="@color/ziti_bai"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/img_my_fragment_about_left" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:text="@string/wode_wodeaijiaxiang"
                    android:textColor="@color/ziti_hei"
                    android:textSize="18dp" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="20dp"
                    android:src="@drawable/img_my_fragment_title_right" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:clickable="true"
                android:id="@+id/wode_fenxiang"
                android:background="@color/ziti_bai"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/img_my_fragment_share_left" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:text="@string/wode_wodefenxiang"
                    android:textColor="@color/ziti_hei"
                    android:textSize="18dp" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="20dp"
                    android:src="@drawable/img_my_fragment_title_right" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:clickable="true"
                android:id="@+id/wode_xiugaimima"
                android:background="@color/ziti_bai"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/img_my_fragment_password_left" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:text="@string/wode_wodexiugaimima"
                    android:textColor="@color/ziti_hei"
                    android:textSize="18dp" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="20dp"
                    android:src="@drawable/img_my_fragment_title_right" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:clickable="true"
                android:id="@+id/wode_qingchuhuancun"
                android:background="@color/ziti_bai"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/img_my_fragment_buffer_left" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:text="@string/wode_wodehuancun"
                    android:textColor="@color/ziti_hei"
                    android:textSize="18dp" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="20dp"
                    android:src="@drawable/img_my_fragment_title_right" />
            </LinearLayout>
            <Button
                android:visibility="gone"
                android:id="@+id/btn_Log_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="10.0dip"
                android:layout_marginTop="20.0dip"
                android:layout_marginBottom="20.0dip"
                android:background="@drawable/btn_large_green"
                android:text="退出登录"
                android:textColor="@android:color/white"
                android:textSize="16.0dip" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>